--- a/shell/android-studio/reicast/src/main/res/layout-v14/pgconfig_fragment.xml
+++ b/shell/android-studio/reicast/src/main/res/layout-v14/pgconfig_fragment.xml
@@ -88,34 +88,6 @@
                 android:gravity="center_vertical" >
 
                 <TextView
-                    android:id="@+id/safemode_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:ems="10"
-                    android:gravity="center_vertical|left"
-                    android:text="@string/select_safemode" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:orientation="vertical" >
-
-                    <Switch
-                        android:id="@+id/dynarec_safemode"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:focusable="true" />
-                </LinearLayout>
-            </TableRow>
-
-            <TableRow
-                android:layout_marginTop="10dp"
-                android:gravity="center_vertical" >
-
-                <TextView
                     android:id="@+id/frameskip_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -169,6 +141,62 @@
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
                 android:background="@drawable/list_item_border" />
+
+            <TableRow
+                android:layout_marginTop="20dp"
+                android:gravity="center_vertical" >
+
+                <TextView
+                    android:id="@+id/dynarec_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:ems="10"
+                    android:gravity="center_vertical|left"
+                    android:text="@string/select_dynarec" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:orientation="vertical" >
+
+                    <Switch
+                        android:id="@+id/dynarec_option"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:focusable="true" />
+                </LinearLayout>
+            </TableRow>
+
+            <TableRow
+                android:layout_marginTop="10dp"
+                android:gravity="center_vertical" >
+
+                <TextView
+                    android:id="@+id/safemode_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:ems="10"
+                    android:gravity="center_vertical|left"
+                    android:text="@string/select_safemode" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:orientation="vertical" >
+
+                    <Switch
+                        android:id="@+id/dynarec_safemode"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:focusable="true" />
+                </LinearLayout>
+            </TableRow>
 
             <TableRow
                 android:layout_marginTop="10dp"
