--- a/shell/android-studio/reicast/src/main/res/layout-v14/pgconfig_fragment.xml
+++ b/shell/android-studio/reicast/src/main/res/layout-v14/pgconfig_fragment.xml
@@ -56,6 +56,33 @@
             android:stretchColumns="*" >
 
             <TableRow
+                android:layout_marginTop="25dp"
+                android:gravity="center_vertical" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:ems="10"
+                    android:gravity="center_vertical|left"
+                    android:text="@string/joystick_layout" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:orientation="vertical" >
+
+                    <Switch
+                        android:id="@+id/switchJoystickDpadEnabled"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:focusable="true" />
+                </LinearLayout>
+            </TableRow>
+
+            <TableRow
                 android:layout_marginTop="10dp"
                 android:gravity="center_vertical" >
 
