--- a/shell/android-studio/reicast/src/main/res/layout/pgconfig_fragment.xml
+++ b/shell/android-studio/reicast/src/main/res/layout/pgconfig_fragment.xml
@@ -370,7 +370,6 @@
                 android:gravity="center_vertical" >
 
                 <TextView
-                    android:id="@+id/apply_pg_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
@@ -389,7 +388,34 @@
                         android:id="@+id/save_pg_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/write_pgc" />
+                        android:text="@string/save_pgc" />
+                </LinearLayout>
+            </TableRow>
+
+            <TableRow
+                android:layout_marginTop="10dp"
+                android:gravity="center_vertical" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:ems="10"
+                    android:gravity="center_vertical|left"
+                    android:text="@string/save_pgc_title" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:orientation="vertical" >
+
+                    <Button
+                        android:id="@+id/clear_pg_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/clear_pgc" />
                 </LinearLayout>
             </TableRow>
         </TableLayout>
