Secondary storage URI, Unwrap for native code

--- a/shell/android-studio/reicast/src/main/res/xml/provider_paths.xml
+++ b/shell/android-studio/reicast/src/main/res/xml/provider_paths.xml
@@ -2,4 +2,5 @@
 <paths>
     <files-path name="files_root" path="."/>
     <external-path name="external_files" path="."/>
+    <root-path name="external_files" path="/storage/" />
 </paths>
