Android: Add DC theme and redesign default

--- a/shell/android-studio/reicast/src/main/res/drawable/gradient_bg_hover_dark.xml
+++ b/shell/android-studio/reicast/src/main/res/drawable/gradient_bg_hover_dark.xml
@@ -5,8 +5,8 @@
     <!-- Gradient BgColor for listrow Selected -->
     <gradient
         android:angle="270"
-        android:centerColor="@color/colorLightAccentDark"
-        android:endColor="@color/colorLightAccent"
-        android:startColor="@color/colorLightAccent" />
+        android:centerColor="@color/colorDarkAccentDark"
+        android:endColor="@color/colorDarkAccent"
+        android:startColor="@color/colorDarkAccent" />
 
 </shape>
