--- a/shell/android-studio/reicast/src/main/res/menu-v23/activity_main.xml
+++ b/shell/android-studio/reicast/src/main/res/menu-v23/activity_main.xml
@@ -34,5 +34,9 @@
         android:id="@+id/about_menu"
         android:icon="@drawable/ic_info_outline"
         android:title="@string/about" />
+    <item
+        android:id="@+id/theme_menu"
+        android:title="@string/theme"
+        android:icon="@android:drawable/ic_menu_view"/>
 
 </menu>
