--- a/shell/android-studio/reicast/src/main/res/layout/input_fragment.xml
+++ b/shell/android-studio/reicast/src/main/res/layout/input_fragment.xml
@@ -169,7 +169,8 @@
                         android:layout_width="48dp"
                         android:layout_height="48dp"
                         android:layout_centerInParent="true"
-                        android:scaleType="fitCenter" />
+                        android:scaleType="fitCenter"
+                        android:tint="@android:color/transparent"/>
 
                     <TextView
                         android:layout_width="0dp"
@@ -226,7 +227,8 @@
                             android:layout_height="48dp"
                             android:layout_centerInParent="true"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/input" />
+                            app:srcCompat="@drawable/input"
+                            android:tint="@android:color/transparent"/>
 
                         <TextView
                             android:id="@+id/controller_text_a"
@@ -317,7 +319,8 @@
                             android:layout_height="48dp"
                             android:layout_centerInParent="true"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/input" />
+                            app:srcCompat="@drawable/input"
+                            android:tint="@android:color/transparent"/>
 
                         <TextView
                             android:id="@+id/controller_text_b"
@@ -422,7 +425,8 @@
                             android:layout_height="48dp"
                             android:layout_centerInParent="true"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/input" />
+                            app:srcCompat="@drawable/input"
+                            android:tint="@android:color/transparent"/>
 
                         <TextView
                             android:id="@+id/controller_text_c"
@@ -527,7 +531,8 @@
                             android:layout_height="48dp"
                             android:layout_centerInParent="true"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/input" />
+                            app:srcCompat="@drawable/input"
+                            android:tint="@android:color/transparent"/>
 
                         <TextView
                             android:id="@+id/controller_text_d"
