--- a/shell/android-studio/reicast/src/main/res/values/dimens.xml
+++ b/shell/android-studio/reicast/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_padding">16dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="nav_header_text_spacing">4dp</dimen>
 
     <dimen name="primary_text_material">16sp</dimen>
     <dimen name="secondary_text_material">14sp</dimen>
