--- a/shell/android-studio/reicast/src/main/res/values/styles.xml
+++ b/shell/android-studio/reicast/src/main/res/values/styles.xml
@@ -3,32 +3,30 @@
     <!-- Base application theme. -->
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:textColorSecondary">@color/body_text_secondary</item>
-        <item name="android:textColorTertiary">@color/white</item>
-        <item name="android:windowBackground">@color/colorPrimary</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
-    </style>
-
-    <style name="AppTheme.Light" parent="AppTheme">
-        <item name="colorPrimary">@color/colorLightPrimary</item>
-        <item name="colorPrimaryDark">@color/colorLightPrimaryDark</item>
-        <item name="colorAccent">@color/colorLightAccent</item>
-        <item name="android:windowBackground">@color/colorLightPrimary</item>
-    </style>
-
-    <style name="AppTheme.Dark" parent="AppTheme">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="colorPrimary">@color/colorDarkPrimary</item>
         <item name="colorPrimaryDark">@color/colorDarkPrimaryDark</item>
         <item name="colorAccent">@color/colorDarkAccent</item>
-        <item name="android:windowBackground">@color/colorDarkPrimary</item>
+        <item name="android:windowBackground">@drawable/background_dark</item>
+
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@color/colorDarkText</item>
+        <item name="android:textColorTertiary">@android:color/white</item>
+
+        <item name="android:tint">@color/colorDarkTint</item>
+    </style>
+
+    <style name="AppTheme.Light" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorLightPrimary</item>
+        <item name="colorPrimaryDark">@color/colorLightPrimaryDark</item>
+        <item name="colorAccent">@color/colorLightAccent</item>
+        <item name="android:windowBackground">@drawable/background_light</item>
+
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textColorSecondary">@color/colorLightText</item>
+        <item name="android:textColorTertiary">@android:color/black</item>
+
+        <item name="android:tint">@color/colorLightPrimaryDark</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -36,19 +34,9 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.Light.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="AppTheme.Dark.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="TextAppearance" parent="@android:style/TextAppearance.Small">
         <item name="android:textColor">?android:attr/textColorPrimary</item>
