Android: Adjust theme prefs for future selections

--- a/shell/android-studio/reicast/src/main/res/layout/bios_list_item.xml
+++ b/shell/android-studio/reicast/src/main/res/layout/bios_list_item.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal"
         android:clickable="true"
         android:focusable="true"
-        android:background="@drawable/game_selector" >
+        android:background="@drawable/game_selector_dream" >
 
         <ImageView
             android:id="@+id/item_icon"
