--- a/shell/android-studio/reicast/src/main/res/layout/browser_fragment_item.xml
+++ b/shell/android-studio/reicast/src/main/res/layout/browser_fragment_item.xml
@@ -14,7 +14,7 @@
         android:layout_centerInParent="true"
         android:clickable="true"
         android:focusable="true"
-        android:background="@drawable/game_selector" >
+        android:background="@drawable/game_selector_dream" >
 
         <ImageView
             android:id="@+id/item_icon"
