--- a/shell/android-studio/reicast/src/main/res/drawable/gradient_bg_hover_dream.xml
+++ b/shell/android-studio/reicast/src/main/res/drawable/gradient_bg_hover_dream.xml
@@ -5,8 +5,8 @@
     <!-- Gradient BgColor for listrow Selected -->
     <gradient
         android:angle="270"
-        android:centerColor="@color/colorLightAccentDark"
-        android:endColor="@color/colorLightAccent"
-        android:startColor="@color/colorLightAccent" />
+        android:centerColor="@color/colorDreamAccentDark"
+        android:endColor="@color/colorDreamAccent"
+        android:startColor="@color/colorDreamAccent" />
 
 </shape>
