--- a/shell/android-studio/reicast/src/main/res/layout/dialog_item.xml
+++ b/shell/android-studio/reicast/src/main/res/layout/dialog_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/list_selector"
+    android:background="@drawable/list_selector_dream"
     android:orientation="horizontal"
     android:padding="5dip" >
 
