--- a/shell/android-studio/reicast/src/main/res/values/styles.xml
+++ b/shell/android-studio/reicast/src/main/res/values/styles.xml
@@ -8,25 +8,21 @@
         <item name="colorPrimaryDark">@color/colorDarkPrimaryDark</item>
         <item name="colorAccent">@color/colorDarkAccent</item>
         <item name="android:windowBackground">@drawable/background_dark</item>
-
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:textColorSecondary">@color/colorDarkText</item>
         <item name="android:textColorTertiary">@android:color/white</item>
-
         <item name="android:tint">@color/colorDarkTint</item>
     </style>
 
-    <style name="AppTheme.Light" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/colorLightPrimary</item>
-        <item name="colorPrimaryDark">@color/colorLightPrimaryDark</item>
-        <item name="colorAccent">@color/colorLightAccent</item>
-        <item name="android:windowBackground">@drawable/background_light</item>
-
+    <style name="AppTheme.Dream" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/colorDreamPrimary</item>
+        <item name="colorPrimaryDark">@color/colorDreamPrimaryDark</item>
+        <item name="colorAccent">@color/colorDreamAccent</item>
+        <item name="android:windowBackground">@drawable/background_dream</item>
         <item name="android:textColorPrimary">@android:color/black</item>
-        <item name="android:textColorSecondary">@color/colorLightText</item>
+        <item name="android:textColorSecondary">@color/colorDreamText</item>
         <item name="android:textColorTertiary">@android:color/black</item>
-
-        <item name="android:tint">@color/colorLightPrimaryDark</item>
+        <item name="android:tint">@color/colorDreamTint</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
