--- a/shell/android-studio/reicast/src/main/res/layout/configure_fragment.xml
+++ b/shell/android-studio/reicast/src/main/res/layout/configure_fragment.xml
@@ -124,11 +124,11 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/button_theme_label"
+                android:id="@+id/app_theme_label"
                 android:layout_width="wrap_content"
                 android:layout_height="0dip"
                 android:layout_weight="1"
-                android:text="@string/button_theme" />
+                android:text="@string/app_theme" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -136,7 +136,7 @@
                 android:orientation="horizontal" >
 
                 <Spinner
-                    android:id="@+id/pick_button_theme"
+                    android:id="@+id/pick_app_theme"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -179,6 +179,35 @@
                 </LinearLayout>
             </TableRow>
         </TableLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/button_theme_label"
+                android:layout_width="wrap_content"
+                android:layout_height="0dip"
+                android:layout_weight="1"
+                android:text="@string/button_theme" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <Spinner
+                    android:id="@+id/pick_button_theme"
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10" >
+                </Spinner>
+            </LinearLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
