--- a/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
+++ b/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
@@ -20,7 +20,12 @@
         <item>VGA</item>
     </string-array>
     
-    <string-array name="themes">
+    <string-array name="themes_app">
+        <item>Dark</item>
+        <item>Dream</item>
+    </string-array>
+
+    <string-array name="themes_ext">
         <item>png</item>
         <item>jpg</item>
         <item>jpeg</item>
