--- a/shell/android-studio/reicast/src/main/res/layout/change_item.xml
+++ b/shell/android-studio/reicast/src/main/res/layout/change_item.xml
@@ -36,6 +36,7 @@
         android:layout_marginTop="16dip"
         android:layout_toRightOf="@+id/thumbnail"
         android:text="GitHub Committer"
+        android:textColor="#040404"
         android:textSize="14sp"
         android:textStyle="bold"
         android:typeface="sans" />
@@ -48,6 +49,7 @@
         android:layout_marginTop="2dip"
         android:layout_toRightOf="@+id/thumbnail"
         android:text="GitHub Commit Message"
+        android:textColor="#343434"
         android:textSize="12sp" />
 
     <!-- Right Date -->
