--- a/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
+++ b/shell/android-studio/reicast/src/main/res/values/donottranslate.xml
@@ -2,7 +2,7 @@
 
     <string name="app_name" translatable="false">reicast</string>
 
-    <string name="app_site" translatable="false">http://reicast.com</string>
+    <string name="app_site" translatable="false">reicast.com</string>
 
     <string-array name="depth">
         <item>16</item>
