Remove GL2JNINative (deprecated Xperia Play compat)
Saying it only works with a very small set of hardware is no different than saying "please try this with everything and tell me when it doesn't work"

--- a/shell/android-studio/reicast/src/main/res/layout/bios_list_item.xml
+++ b/shell/android-studio/reicast/src/main/res/layout/bios_list_item.xml
@@ -25,7 +25,7 @@
             android:layout_marginRight="6dp"
             android:layout_marginTop="2dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/gdi" />
+            app:srcCompat="@drawable/disk_unknown" />
 
         <TextView
             android:id="@+id/item_name"
