--- a/shell/android-studio/reicast/src/main/res/layout/browser_fragment_header.xml
+++ b/shell/android-studio/reicast/src/main/res/layout/browser_fragment_header.xml
@@ -25,8 +25,7 @@
             android:layout_marginRight="2dp"
             android:layout_marginTop="2dp"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/ic_settings"
-            android:tint="@android:color/transparent"/>
+            app:srcCompat="@drawable/ic_settings"/>
 
         <TextView
             android:id="@+id/item_name"
