--- a/shell/android-studio/reicast/src/main/res/layout/input_fragment.xml
+++ b/shell/android-studio/reicast/src/main/res/layout/input_fragment.xml
@@ -169,8 +169,7 @@
                         android:layout_width="48dp"
                         android:layout_height="48dp"
                         android:layout_centerInParent="true"
-                        android:scaleType="fitCenter"
-                        android:tint="@android:color/transparent"/>
+                        android:scaleType="fitCenter"/>
 
                     <TextView
                         android:layout_width="0dp"
@@ -227,8 +226,7 @@
                             android:layout_height="48dp"
                             android:layout_centerInParent="true"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/input"
-                            android:tint="@android:color/transparent"/>
+                            app:srcCompat="@drawable/input"/>
 
                         <TextView
                             android:id="@+id/controller_text_a"
@@ -319,8 +317,7 @@
                             android:layout_height="48dp"
                             android:layout_centerInParent="true"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/input"
-                            android:tint="@android:color/transparent"/>
+                            app:srcCompat="@drawable/input"/>
 
                         <TextView
                             android:id="@+id/controller_text_b"
@@ -425,8 +422,7 @@
                             android:layout_height="48dp"
                             android:layout_centerInParent="true"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/input"
-                            android:tint="@android:color/transparent"/>
+                            app:srcCompat="@drawable/input"/>
 
                         <TextView
                             android:id="@+id/controller_text_c"
@@ -531,8 +527,7 @@
                             android:layout_height="48dp"
                             android:layout_centerInParent="true"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/input"
-                            android:tint="@android:color/transparent"/>
+                            app:srcCompat="@drawable/input"/>
 
                         <TextView
                             android:id="@+id/controller_text_d"
